<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF">

    <TextView
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/ralewaybold"
        android:text="@string/discover_our_features"
        android:textColor="@color/calm_blue"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="680dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="101dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical">

        <!-- First Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/detox_programs"
            android:fontFamily="@font/popbold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="133dp"
                android:layout_height="match_parent"
                android:src="@drawable/feature1" />

            <TextView
                android:layout_width="201dp"
                android:layout_height="match_parent"
                android:text="@string/feature1text"
                android:textSize="18sp"
                android:fontFamily="@font/ralewaybold"
                android:textColor="@color/secondary_color"/>

        </LinearLayout>

        <!-- Space between sections -->
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- Second Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/feature2"
            android:fontFamily="@font/popbold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="129dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="137dp"
                android:layout_height="129dp"
                android:src="@drawable/feature2" />

            <TextView
                android:layout_width="199dp"
                android:layout_height="match_parent"
                android:text="@string/feature2text"
                android:textSize="18sp"
                android:fontFamily="@font/ralewaybold"
                android:textColor="@color/secondary_color"/>
        </LinearLayout>

        <!-- Space between sections -->
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- Third Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/feature3"
            android:fontFamily="@font/popbold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="134dp"
                android:layout_height="124dp"
                android:src="@drawable/feature3" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="118dp"
                android:text="@string/feature3text"
                android:textSize="18sp"
                android:fontFamily="@font/ralewaybold"
                android:textColor="@color/secondary_color"/>
        </LinearLayout>

        <!-- Space between sections -->
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- Fourth Section -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/track_reward"
            android:fontFamily="@font/popbold"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="136dp"
                android:layout_height="125dp"
                android:src="@drawable/feature4" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="121dp"
                android:text="@string/feature4text"
                android:textSize="18sp"
                android:fontFamily="@font/ralewaybold"
                android:textColor="@color/secondary_color"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/go_to_third_screen_button"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="-1dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/ralewaybold"
        android:text="@string/next1st"
        android:textColor="#6c63ff"/>

</RelativeLayout>
