<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="354dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/popbold"
        android:text="@string/title1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/ralewaybold"
        android:text="@string/dopabloom"
        android:textColor="@color/calm_blue"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="266dp"
        android:layout_height="246dp"
        android:src="@drawable/sdasda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        tools:ignore="ContentDescription,MissingConstraints" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_designer"
        android:fontFamily="@font/ralewaybold"
        android:text="@string/signup"
        android:textColor="@color/calm_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_designer2"
        android:fontFamily="@font/ralewaybold"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>