<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF">

    <!-- Welcome text at the top center -->
    <TextView
        android:id="@+id/welcome_to_dopabloom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/welcome_to_dopabloom"
        android:textColor="#6c63ff"
        android:textSize="24sp"
        android:fontFamily="@font/ralewaybold"

        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome_to_dopabloom"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:text="@string/nurture_your_mind_and_watch_your_life_blossom"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:fontFamily="@font/popbold"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/animatedImageView"
        android:layout_width="432dp"
        android:layout_height="621dp"
        android:layout_above="@+id/imageView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-2dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="45dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/sdasda" />

    <Button
        android:id="@+id/go_to_second_screen_button"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="-1dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/ralewaybold"
        android:text="@string/next1st"
        android:textColor="#6c63ff" />

</RelativeLayout>
