<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="216dp"
        android:layout_height="200dp"
        android:src="@drawable/sdasda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.218"
        tools:ignore="ContentDescription,MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="86dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/popbold"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="282dp"
        android:layout_height="63dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/ralewaybold"
        android:gravity="center_horizontal"
        android:text="@string/welcome_back"
        android:textColor="@color/calm_blue"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="253dp"
        android:layout_height="52dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/inputdesign"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/inputdesign"
        android:ems="10"
        android:gravity="clip_horizontal"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popbold"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/popbold"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.231"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_to_home"
        android:layout_width="255dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_designer2"
        android:fontFamily="@font/ralewaybold"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <View

        android:id="@+id/divider"
        android:layout_width="313dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="68dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/popbold"
        android:gravity="center_horizontal"
        android:text="@string/no_account"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup_link"
        android:layout_width="98dp"
        android:layout_height="31dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/popbold"
        android:gravity="center_horizontal"
        android:text="@string/signup"
        android:textColor="@color/calm_blue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/divider"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>